# claude-agent-sdk-in-production

./: .gitignore  LICENSE  README.md
data/: build_beanline_db.py  generate_beanline.py
part-01-first-agent/: README.md
part-01-first-agent/backend/: agent.py  hello.py  pyproject.toml
part-02-fastapi-streaming/: README.md
part-02-fastapi-streaming/backend/app/: events.py
part-03-agent-ui/: README.md
part-03-agent-ui/backend/app/: main.py
part-03-agent-ui/frontend/app/: page.tsx
part-03-agent-ui/frontend/components/: Markdown.tsx
part-03-agent-ui/frontend/lib/: toolLabel.ts  types.ts
part-04-workspaces-artifacts/: README.md
part-05-sessions/: README.md
part-06-custom-tools/: README.md
part-07-approvals/: README.md
part-07-approvals/backend/: pyproject.toml
part-07-approvals/frontend/: .gitignore  package-lock.json
part-08-hooks/: README.md
part-09-durable-streams/: README.md
part-10-interactive/: README.md
part-10-interactive/backend/: pyproject.toml
part-11-subagents-skills/: README.md
part-11-subagents-skills/backend/: probe_naming.py
part-12-mcp-sandboxing/: README.md
part-12-mcp-sandboxing/backend/: pyproject.toml
part-13-structured-evals/: README.md
part-13-structured-evals/backend/: pyproject.toml
part-13-structured-evals/backend/app/: approvals.py  events.py  main.py  runner.py  sessions.py  summary.py
part-13-structured-evals/backend/demo_pages/: supplier-notice.html
part-13-structured-evals/backend/evals/: cases.yaml  judge.py  run.py
part-13-structured-evals/backend/sample_data/: products.csv
(+66 files in other folders)
