[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.22.1",
    "claude-agent-sdk==0.2.110",
    "fastapi==0.136.3",
    "matplotlib==3.11.0",
    "mcp-server-fetch==2026.6.4",
    "pandas==3.0.3",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.3",
    "uvicorn[standard]==0.49.0",
]
